<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SQLite-Demo-DB</string>
    <string name="action_settings">Settings</string>
    <string name="add_title">Add Update Screen</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="add">Add New Contact</string>
    <string name="add1">Add</string>
    <string name="vall">View All</string>
    <string name="saveup">Save Updates</string>
    <string name="title_activity_add__update__user">Add_Update_User</string>
    <string name="dbimg1">image1</string>
    <string name="dbtitle">SQLite - INSERT, UPDATE, DELETE</string>
    <string name="dblink">http://dbh4ck.blogspot.in</string>

</resources>
