<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="423dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dbtitle"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="#0b4af6" />

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="#cac3c3"
            android:layout_weight="0.98" />

    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#436aeb"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dblink"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:autoLink="web"
        android:textSize="20sp" />

</LinearLayout>